--- a/app/src/main/res/layout/activity_viewer_screen.xml
+++ b/app/src/main/res/layout/activity_viewer_screen.xml
@@ -2,17 +2,26 @@
 <RelativeLayout
 	style="@style/LL.V"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<android.support.v7.widget.RecyclerView
-		app:layoutManager="LinearLayoutManager"
 		android:id="@+id/recyclerview"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_above="@+id/linearLayout"
-		android:layout_alignParentTop="true">
-
+		android:layout_alignParentTop="true"
+		app:layoutManager="LinearLayoutManager">
 	</android.support.v7.widget.RecyclerView>
+
+	<TextView
+		android:id="@+id/empty_content"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
+		android:text="@string/not_fount_orders"
+		android:visibility="gone"
+		tools:visibility="visible"/>
 
 	<LinearLayout
 		android:id="@+id/linearLayout"
