--- a/app/src/main/res/layout/activity_edit_screen.xml
+++ b/app/src/main/res/layout/activity_edit_screen.xml
@@ -4,18 +4,15 @@
 			  android:layout_height="match_parent"
 			  android:orientation="vertical">
 
-
-	<!--Наличие Gaming Keyboard/Mouse - bool (тож чекбоксом).-->
+	<home.work.pcconfig.ui.detail.views.LinePickerView
+		android:id="@+id/order_cpu"
+		style="@style/qwe"
+		android:hint="@string/order_cpu_hint"/>
 
 	<home.work.pcconfig.ui.detail.views.LineEditView
 		android:id="@+id/order_matherboard"
 		style="@style/qwe"
 		android:hint="@string/order_matherboard_hint"/>
-
-	<home.work.pcconfig.ui.detail.views.LinePickerView
-		android:id="@+id/order_cpu"
-		style="@style/qwe"
-		android:hint="@string/order_cpu_hint"/>
 
 	<home.work.pcconfig.ui.detail.views.LineEditView
 		android:id="@+id/order_gpu"
@@ -35,7 +32,8 @@
 			android:id="@+id/order_storage_size"
 			style="@style/qwe"
 			android:layout_weight="1"
-			android:hint="@string/order_storage_hint"/>
+			android:hint="@string/order_storage_hint"
+			android:inputType="numberDecimal"/>
 
 		<CheckBox
 			android:id="@+id/order_storage"
@@ -52,8 +50,9 @@
 		android:gravity="center"
 		android:hint="@string/gaming_edition"/>
 
-	<Button style="@style/Button"
-			android:id="@+id/order_action_btn"
-			android:text="@string/order_create_btn"
-			android:layout_width="match_parent"/>
+	<Button
+		android:id="@+id/order_action_btn"
+		style="@style/Button"
+		android:layout_width="match_parent"
+		android:text="@string/order_create_btn"/>
 </LinearLayout>
