--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
 	<style name="Button" parent="Base.Widget.AppCompat.Button.Colored">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
+		<item name="android:textColor">#fff</item>
 	</style>
 
 
@@ -18,6 +19,7 @@
 		<item name="android:layout_weight">1</item>
 		<item name="android:layout_width">0dp</item>
 		<item name="android:layout_height">wrap_content</item>
+		<item name="android:textColor">#fff</item>
 	</style>
 
 
