--- a/app/src/main/res/layout/screen_stream_list.xml
+++ b/app/src/main/res/layout/screen_stream_list.xml
@@ -22,7 +22,5 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
-		android:text="@string/not_fount_orders"
-		android:visibility="gone"
-		tools:visibility="visible"/>
+		android:text="@string/not_found_sms"/>
 </RelativeLayout>
