--- a/app/src/main/res/layout/screen_stream_list.xml
+++ b/app/src/main/res/layout/screen_stream_list.xml
@@ -45,10 +45,10 @@
 		android:id="@+id/recyclerview"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		android:layout_below="@+id/ll"
+		android:layout_above="@+id/ll2"
 		app:layoutManager="LinearLayoutManager">
 	</android.support.v7.widget.RecyclerView>
 
@@ -58,4 +58,40 @@
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
 		android:text="@string/not_found_sms"/>
+
+
+	<LinearLayout
+		android:id="@+id/ll2"
+		style="@style/LL.H"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_gravity="bottom"
+		android:background="#fff"
+		android:minHeight="@dimen/chat_inputbar_height">
+
+		<EditText
+			android:id="@+id/chat_input_text"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_margin="4dp"
+			android:layout_weight="1"
+			android:background="@drawable/chat_inputbar_edittext_bg"
+			android:gravity="center_vertical"
+			android:hint="Текст сообщения..."
+			android:imeOptions="actionSend"
+			android:inputType="textMultiLine"
+			android:maxLines="4"
+			android:minHeight="@dimen/chat_inputbar_edit_height"
+			android:paddingBottom="4dp"
+			android:paddingLeft="8dp"
+			android:paddingRight="8dp"
+			android:paddingTop="4dp" />
+
+		<ImageView
+			android:visibility="gone"
+			tools:visibility="visible"
+			android:id="@+id/chat_input_send"
+			style="@style/InputBarButton"
+			android:src="@android:drawable/ic_menu_send" />
+	</LinearLayout>
 </RelativeLayout>
