--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,13 @@
 		<item name="android:layout_height">wrap_content</item>
 	</style>
 
+	<style name="InputBarButton">
+		<item name="android:layout_marginBottom">4dp</item>
+		<item name="android:padding">4dp</item>
+		<item name="android:layout_width">44dp</item>
+		<item name="android:layout_height">44dp</item>
+		<item name="android:scaleType">fitCenter</item>
+		<item name="android:layout_gravity">center|bottom</item>
+	</style>
+
 </resources>
