--- a/app/src/main/res/layout/screen_stream_list.xml
+++ b/app/src/main/res/layout/screen_stream_list.xml
@@ -49,6 +49,7 @@
 		android:layout_alignParentStart="true"
 		android:layout_below="@+id/ll"
 		android:layout_above="@+id/ll2"
+		app:stackFromEnd="true"
 		app:layoutManager="LinearLayoutManager">
 	</android.support.v7.widget.RecyclerView>
 
